# teck3-CPP_zia_2018

./: .gitignore  CMakeLists.txt  Readme.md  conanbuildinfo.cmake  conanbuildinfo.txt  conanfile.txt  conaninfo.txt  start.sh  test.xml
conf/: server2.xml  test.xml
include/: AModulesManager.hpp  Stage.hpp  parseXml.hpp
src/: main.cpp
src/components/server/: Server.cpp  Server.h  TcpConnection.cpp  TcpConnection.h
src/modules/http/: HttpModule.cpp  HttpModule.hpp  Makefile
src/modules/log/: Makefile  Makefile.linux  log.cpp
src/modules/php/: Makefile  php.cpp
src/modules/resp/: Makefile  Makefile.mac  RespModule.cpp  RespModule.hpp
src/modules/ssl/: Makefile  Makefile.mac  SSLModule.cpp  SSLModule.hpp
src/services/: HeaderManager.cpp  HeaderManager.hpp  ManagerServer.cpp  ManagerServer.h++  ModulesManager.cpp  ModulesManager.hpp
ssl/: cert.pem  key.pem
www/: image.html  php.html  video.html
